ENTIRE TASK 1 DONE AT LAST PLEASE - FINAL

--- a/A4/Q2/code.ipynb
+++ b/A4/Q2/code.ipynb
@@ -9,8 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: pandas in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (2.2.3)\n",
       "Requirement already satisfied: seaborn in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (0.13.2)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (1.5.2)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (3.9.3)\n",
@@ -30,7 +29,8 @@
       "Requirement already satisfied: pillow>=8 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (11.0.0)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from matplotlib) (3.2.0)\n",
       "Requirement already satisfied: imbalanced-learn in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from imblearn) (0.12.4)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vikra\\onedrive\\desktop\\cse643-ai\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -269,21 +269,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:12: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:28: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:32: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:37: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:12: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:28: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:32: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:37: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\3401068193.py:12: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:14: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:31: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:35: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:40: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:14: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:31: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:35: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:40: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\841692586.py:14: SyntaxWarning: invalid escape sequence '\\T'\n",
       "  print(\"\\Train nSample Data:\")\n",
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\3401068193.py:28: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\841692586.py:31: SyntaxWarning: invalid escape sequence '\\T'\n",
       "  print(\"\\Tes nUnique Values in Each Column:\")\n",
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\3401068193.py:32: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\841692586.py:35: SyntaxWarning: invalid escape sequence '\\T'\n",
       "  print(\"\\Test nSample Data:\")\n",
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\3401068193.py:37: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\841692586.py:40: SyntaxWarning: invalid escape sequence '\\T'\n",
       "  print(\"\\Test nStatistical Analysis of Numerical Columns:\")\n"
      ]
     }
@@ -302,7 +302,7 @@
     "unique_values = train_data.nunique()\n",
     "print(unique_values)\n",
     "\n",
-    "print(\"\\Train nSample Data:\")\n",
+    "print(\"\\nTrain Sample Data:\")\n",
     "print(train_data.head())\n",
     "\n",
     "numerical_columns_train = train_data.select_dtypes(include=['float64', 'int64'])\n",
@@ -319,16 +319,16 @@
     "print(\"Test Dataset Overview:\")\n",
     "print(test_data.info())\n",
     "\n",
-    "print(\"\\Tes nUnique Values in Each Column:\")\n",
+    "print(\"\\nTest Unique Values in Each Column:\")\n",
     "unique_values = test_data.nunique()\n",
     "print(unique_values)\n",
     "\n",
-    "print(\"\\Test nSample Data:\")\n",
+    "print(\"\\nTest Sample Data:\")\n",
     "print(test_data.head())\n",
     "\n",
     "numerical_columns_test = test_data.select_dtypes(include=['float64', 'int64'])\n",
     "\n",
-    "print(\"\\Test nStatistical Analysis of Numerical Columns:\")\n",
+    "print(\"\\nTest Statistical Analysis of Numerical Columns:\")\n",
     "stats = numerical_columns_test.describe(percentiles=[0.25, 0.5, 0.75]).T\n",
     "stats['std'] = numerical_columns_test.std()\n",
     "print(stats)\n",
@@ -484,7 +484,8 @@
       "Mean Squared Error (Scaled Data): 398698988491.0486\n",
       "R² Score (Scaled Data): 0.9996587268320517\n",
       "Mean Absolute Error (Scaled Data): 42870.84398976982\n",
-      "Scaled data saved to 'scaled_data.csv'\n"
+      "Scaled data saved to 'scaled_train_data.csv'\n",
+      "Scaled data saved to 'scaled_test_data.csv'\n"
      ]
     }
    ],
@@ -549,12 +550,15 @@
     "print(f\"Mean Absolute Error (Scaled Data): {mae_scaled}\")\n",
     "\n",
     "X_train_final.to_csv('scaled_train_data.csv', index=False)\n",
-    "print(\"Scaled data saved to 'scaled_data.csv'\")"
+    "print(\"\\nScaled data saved to 'scaled_train_data.csv'\")\n",
+    "\n",
+    "X_test_final.to_csv('scaled_test_data.csv', index=False)\n",
+    "print(\"Scaled data saved to 'scaled_test_data.csv'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +587,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\2294203904.py:31: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\3180735513.py:31: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -637,12 +641,12 @@
     "    else:\n",
     "        return 'Very High'\n",
     "\n",
-    "train_data['Price_Category'] = train_data['Price'].apply(categorize_price)\n",
-    "test_data['Price_Category'] = test_data['Price'].apply(categorize_price)\n",
+    "X_train_final['Price_Category'] = X_train_final['Price'].apply(categorize_price)\n",
+    "X_test_final['Price_Category'] = X_test_final['Price'].apply(categorize_price)\n",
     "\n",
-    "print(train_data[['Price', 'Price_Category']].head())\n",
+    "print(X_train_final[['Price', 'Price_Category']].head())\n",
     "\n",
-    "category_counts = train_data['Price_Category'].value_counts()\n",
+    "category_counts = X_train_final['Price_Category'].value_counts()\n",
     "\n",
     "# Plot the distribution of price categories\n",
     "plt.figure(figsize=(8, 6))\n",
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +701,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\1081929574.py:29: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\1334085866.py:29: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -718,7 +722,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\1081929574.py:37: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\1334085866.py:37: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -768,7 +772,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\1081929574.py:71: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\1334085866.py:71: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -789,7 +793,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_25592\\1081929574.py:79: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\1334085866.py:79: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -809,8 +813,8 @@
    ],
    "source": [
     "# Train Data\n",
-    "X_train = train_data.drop(columns=['Price_Category'])\n",
-    "y_train = train_data['Price_Category']\n",
+    "X_train = X_train_final.drop(columns=['Price_Category'])\n",
+    "y_train = X_train_final['Price_Category']\n",
     "\n",
     "print(\"Original Training Set Distribution (Train Data):\")\n",
     "print(y_train.value_counts())\n",
@@ -853,7 +857,7 @@
     "\n",
     "\n",
     "# Test Data\n",
-    "X_test = test_data.drop(columns=['Price_Category'])\n",
+    "X_test = X_train_final.drop(columns=['Price_Category'])\n",
     "y_test = test_data['Price_Category']\n",
     "\n",
     "print(\"Original Training Set Distribution (Test Data):\")\n",
@@ -893,6 +897,13 @@
     "plt.savefig(\"Plots/oversampling_test_data_distribution.png\", bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
