ENTIRE TASK 1 DONE AT LAST PLEASE - FINAL ye, only had to add the price category

--- a/A4/Q2/code.ipynb
+++ b/A4/Q2/code.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -484,6 +484,7 @@
       "Mean Squared Error (Scaled Data): 398698988491.0486\n",
       "R² Score (Scaled Data): 0.9996587268320517\n",
       "Mean Absolute Error (Scaled Data): 42870.84398976982\n",
+      "\n",
       "Scaled data saved to 'scaled_train_data.csv'\n",
       "Scaled data saved to 'scaled_test_data.csv'\n"
      ]
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +576,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Final train and test datasets with 'Price_Category' saved successfully:\n",
+      "- X_train_final_with_categories.csv\n",
+      "- X_test_final_with_categories.csv\n",
       "       Price Price_Category\n",
       "0   14500000         Medium\n",
       "1   18500000         Medium\n",
@@ -587,7 +591,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\3180735513.py:31: FutureWarning: \n",
+      "C:\\Users\\vikra\\AppData\\Local\\Temp\\ipykernel_10556\\2760321665.py:38: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -644,6 +648,13 @@
     "X_train_final['Price_Category'] = X_train_final['Price'].apply(categorize_price)\n",
     "X_test_final['Price_Category'] = X_test_final['Price'].apply(categorize_price)\n",
     "\n",
+    "X_train_final.to_csv(\"X_train_final_with_categories.csv\", index=False)\n",
+    "X_test_final.to_csv(\"X_test_final_with_categories.csv\", index=False)\n",
+    "\n",
+    "print(\"Final train and test datasets with 'Price_Category' saved successfully:\")\n",
+    "print(\"- X_train_final_with_categories.csv\")\n",
+    "print(\"- X_test_final_with_categories.csv\")\n",
+    "\n",
     "print(X_train_final[['Price', 'Price_Category']].head())\n",
     "\n",
     "category_counts = X_train_final['Price_Category'].value_counts()\n",
@@ -665,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -857,8 +868,8 @@
     "\n",
     "\n",
     "# Test Data\n",
-    "X_test = X_train_final.drop(columns=['Price_Category'])\n",
-    "y_test = test_data['Price_Category']\n",
+    "X_test = X_test_final.drop(columns=['Price_Category'])\n",
+    "y_test = X_test_final['Price_Category']\n",
     "\n",
     "print(\"Original Training Set Distribution (Test Data):\")\n",
     "print(y_test.value_counts())\n",
